# test_ceps

./: README.md  ceps.csv  compose.yml  consult_ceps.py  errors.csv  etl_ceps.py  merge_csv.py  pyproject.toml  results.csv  results.xml
cep_processor/: database.py  exporter.py  http_client.py  queue_processor.py
datasource_ceps/: al.cepaberto_parte_3.csv  al.cepaberto_parte_4.csv  al.cepaberto_parte_5.csv
