[project]
name = "test-ceps"
version = "0.1.0"
description = "ETL for CEPs Test"
authors = [
    {name = "Elysson MR",email = "elyssonmr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)",
]

[dependency-groups]
dev = [
    "ruff (>=0.14.13,<0.15.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.ruff.format]
preview = true
quote-style = "single"

[tool.poetry]
package-mode = false

[tool.taskipy.tasks]
lint = "ruff check . && ruff check . --diff"
format = "ruff check . --fix && ruff format ."
run_db = 'docker compose up -d'
pre_run = "task run_db"
run = "python etl_ceps.py"
merge_ceps = "python merge_csv.py"
